--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>App Pesquisa Endereço</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="script.js"></script>
 </head>
 <body>
 
